--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -157,54 +157,60 @@
     <!-- Path to the custom sign-up JavaScript file -->
     <script type="module">
         import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import { getFirestore, setDoc, doc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
-            authDomain: "drive-mzansi-app.firebaseapp.com",
-            projectId: "drive-mzansi-app",
-            storageBucket: "drive-mzansi-app.appspot.com",
-            messagingSenderId: "1007195133421",
-            appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4",
-            measurementId: "G-WGTMR2MFRY"
-        };
+// Initialize Firebase
+const firebaseConfig = {
+    apiKey: "AIzaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
+    authDomain: "drive-mzansi-app.firebaseapp.com",
+    projectId: "drive-mzansi-app",
+    storageBucket: "drive-mzansi-app.appspot.com",
+    messagingSenderId: "1007195133421",
+    appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4",
+    measurementId: "G-WGTMR2MFRY"
+};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
+const signupForm = document.getElementById('signup-form');
+signupForm.addEventListener('submit', (event) => {
+    event.preventDefault();
 
-        // Sign-up function
-        const signupForm = document.getElementById('signup-form');
-        signupForm.addEventListener('submit', (event) => {
-            event.preventDefault();
+    const name = document.getElementById('name').value;
+    const surname = document.getElementById('surname').value;
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+    const confirmPassword = document.getElementById('confirm-password').value;
 
-            const name = document.getElementById('name').value;
-            const surname = document.getElementById('surname').value;
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const confirmPassword = document.getElementById('confirm-password').value;
+    if (password !== confirmPassword) {
+        alert("Passwords do not match!");
+        return;
+    }
 
-            if (password !== confirmPassword) {
-                alert("Passwords do not match!");
-                return;
-            }
+    createUserWithEmailAndPassword(auth, email, password)
+        .then(async (userCredential) => {
+            const user = userCredential.user;
+            console.log("User signed up:", user);
 
-            // Firebase signup
-            createUserWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    console.log("User signed up:", user);
-                    alert("Sign up successful! Please log in.");
-                    window.location.href = "login.html"; // Redirect to login page
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessage = error.message;
-                    console.error("Error during sign up:", errorCode, errorMessage);
-                    alert(errorMessage); // Display error message
-                });
+            // Save user details to Firestore
+            await setDoc(doc(db, "users", user.uid), {
+                name: name,
+                surname: surname,
+                email: email
+            });
+
+            alert("Sign up successful! Please log in.");
+            window.location.href = "login.html"; // Redirect to login page
+        })
+        .catch((error) => {
+            const errorCode = error.code;
+            const errorMessage = error.message;
+            console.error("Error during sign up:", errorCode, errorMessage);
+            alert(errorMessage);
         });
+});
     </script>
 </body>
 </html>
