--- a/public/home.html
+++ b/public/home.html
@@ -97,13 +97,13 @@
         <ul>
             <li><a href="profile.html">Profile</a></li>
             <li><a href="index.html" id="logout">Logout</a></li>
-            <li><a href="results.html">See Results</a></li>
+            <li><a href="results.html">Results</a></li>
         </ul>
     </nav>
 
     <!-- User Information -->
     <div id="user-info">
-        <h2>Welcome, <span id="user-name">Joe Doe</span></h2>
+        <h2>Welcome, <span id="user-name">User</span></h2>
     </div>
 
     <!-- Timer Display -->
