--- a/public/home.html
+++ b/public/home.html
@@ -103,7 +103,7 @@
 
     <!-- User Information -->
     <div id="user-info">
-        <h2>Welcome, <span id="user-name">User</span></h2>
+        <h2>Welcome, <span id="userName">User</span></h2>
     </div>
 
     <!-- Timer Display -->
