--- a/public/results.html
+++ b/public/results.html
@@ -13,6 +13,26 @@
             padding: 0;
         }
 
+        /* Navbar styling */
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+
+        .navbar a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+
+        .navbar a:hover {
+            background-color: #444;
+        }
+
         .container {
             max-width: 800px;
             margin: 50px auto;
@@ -53,6 +73,13 @@
     </style>
 </head>
 <body>
+    <!-- Navigation bar -->
+    <div class="navbar">
+        <a href="home.html">Home</a>
+        <a href="profile.html">Profile</a>
+        <a href="results.html">Results</a>
+    </div>
+
     <div class="container" id="results-container">
         <h2>Quiz Results</h2>
         <div class="result-info" id="score-display">
@@ -91,6 +118,3 @@
     <script src="src/components/results.js"></script>
 </body>
 </html>
-
-
-
