--- a/public/results.html
+++ b/public/results.html
@@ -73,12 +73,19 @@
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <div class="navbar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="results.html">Results</a></li>
+                </div>
+            </ul>      
+        </nav>     
+    </header>
     <!-- Navigation bar -->
-    <div class="navbar">
-        <a href="home.html">Home</a>
-        <a href="profile.html">Profile</a>
-        <a href="results.html">Results</a>
-    </div>
+    
 
     <div class="container" id="results-container">
         <h2>Quiz Results</h2>
