sign-up link corrected

--- a/public/login.html
+++ b/public/login.html
@@ -117,7 +117,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
         <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
@@ -134,7 +134,7 @@
 
             <button type="submit">Log In</button>
         </form>
-        <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+        <p>Don't have an account? <a href="sign-up.html">Sign up</a></p>
     </main>
 
     <footer>
