--- a/public/about.html
+++ b/public/about.html
@@ -41,10 +41,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="landing.html">Take the Test</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li><a href="results.html">Results</a></li>
+        <li><a href="sign-up.html">Sign Up</a></li>
+        <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -75,7 +73,7 @@
 
       <h3>Preparing for Your Test with Drive Mzansi</h3>
       <p>Our platform helps you gain the confidence you need to pass the K53 test. With a friendly and easy-to-use interface, Drive Mzansi provides you with the tools to become a safe and knowledgeable driver.</p>
-      <p>Ready to start your journey? Head to the <a href="home.html">Take the Test</a> page to begin practicing.</p>
+      <p>Ready to start your journey? Head to the <a href="login.html">Take the Test</a> page to begin practicing.</p>
     </section>
   </main>
 
