--- a/public/index.html
+++ b/public/index.html
@@ -77,9 +77,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="profile.html">Profile</a></li>
             </ul>
         </nav>
         <img src="images/logo.png" alt="Drive Mzansi Logo" class="logo" id="index-logo">
