--- a/public/profile.html
+++ b/public/profile.html
@@ -17,18 +17,20 @@
 
     header {
       background-color: #333;
+      padding: 10px;
+      color: white;
     }
 
     nav ul {
       list-style-type: none;
       margin: 0;
-      padding: 10px 0; /* Reduced padding for a smaller navbar */
+      padding: 10px 0;
       display: flex;
       justify-content: center;
     }
 
     nav li {
-      padding: 8px 15px; /* Smaller padding to reduce navbar size */
+      padding: 8px 15px;
     }
 
     nav a {
@@ -60,6 +62,12 @@
 
     h2 {
       margin-top: 20px;
+    }
+
+    #user-name {
+      font-size: 20px;
+      margin-top: 10px;
+      font-weight: bold;
     }
 
     #profile-score {
@@ -108,6 +116,7 @@
       </ul>
     </nav>
     <img src="images/Greencarlogo2.png" alt="Drive Mzansi Logo" width="200" height="200">
+    <div id="user-name"></div> <!-- Display user name here -->
   </header>
   
   <main>
@@ -152,20 +161,29 @@
     document.addEventListener('DOMContentLoaded', function () {
         const resultsContainer = document.getElementById('results-container');
         const profileScoreContainer = document.getElementById('profile-score');
+        const userNameContainer = document.getElementById('user-name');
         
-        // Check user authentication and retrieve data
+        // Fetch user name and score from localStorage
+        const userName = localStorage.getItem('userName');
+        const userScore = localStorage.getItem('userScore');
+
+        // Display user name and score if available
+        if (userName) {
+          userNameContainer.textContent = `Welcome, ${userName}!`;
+        } else {
+          userNameContainer.textContent = "Welcome, User!";
+        }
+
+        if (userScore) {
+          profileScoreContainer.textContent = `Last score: ${userScore} out of 9`;
+        } else {
+          profileScoreContainer.textContent = "No score found for this user.";
+        }
+
+        // Check user authentication and retrieve additional data if necessary
         auth.onAuthStateChanged((user) => {
           if (user) {
             const userId = user.uid;
-
-            // Fetch last score
-            db.collection('users').doc(userId).get().then(doc => {
-              if (doc.exists && doc.data().score !== undefined) {
-                profileScoreContainer.textContent = `Last score: ${doc.data().score} out of 9`;
-              } else {
-                profileScoreContainer.textContent = 'No score found for this user.';
-              }
-            });
 
             // Fetch last 3 test results from Firestore
             db.collection('testResults')
